--- a/demos/how-pangolin-works.ipynb
+++ b/demos/how-pangolin-works.ipynb
@@ -447,19 +447,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=RV(normal_scale, parents=[RV(Constant(0.)),RV(Constant(1.))])\n"
+      "x=RV(normal_scale, parents=[RV(Constant(0.)),RV(Constant(1.))])\n",
+      "y=RV(normal_scale, parents=[RV(Constant(0.)),RV(Constant(1.))])\n"
      ]
     }
    ],
    "source": [
     "x = RV(normal_scale, RV(Constant(0.0)), RV(Constant(1.0)))\n",
-    "print(f\"{x=}\")"
+    "print(f\"{x=}\")\n",
+    "y = normal_scale(RV(Constant(0.0)), RV(Constant(1.0)))\n",
+    "print(f\"{y=}\")"
    ],
    "metadata": {
     "collapsed": false
@@ -476,19 +479,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "makerv(RV(bernoulli, RV(Constant(0.5))))=RV(bernoulli, parents=[RV(Constant(0.5))])\n",
+      "x=RV(bernoulli, parents=[RV(Constant(0.5))])\n",
+      "makerv(x)=RV(bernoulli, parents=[RV(Constant(0.5))])\n",
       "makerv(1)=RV(Constant(1))\n"
      ]
     }
    ],
    "source": [
-    "print(f\"{makerv(RV(bernoulli, RV(Constant(0.5))))=}\")\n",
+    "x = RV(bernoulli, RV(Constant(0.5)))\n",
+    "print(f\"{x=}\")\n",
+    "print(f\"{makerv(x)=}\")\n",
     "print(f\"{makerv(1)=}\")"
    ],
    "metadata": {
@@ -506,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "outputs": [
     {
      "name": "stdout",
@@ -1264,6 +1270,13 @@
     "l = LogProb(normal_scale)(x,0,1)\n",
     "print_upstream(l)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
