--- a/exploratory notebooks/demo-lda.ipynb
+++ b/exploratory notebooks/demo-lda.ipynb
@@ -424,8 +424,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vmap' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m a \u001B[38;5;241m=\u001B[39m vmap(normal,\u001B[38;5;241m0\u001B[39m)(locs,scales)\n\u001B[1;32m      2\u001B[0m Ex \u001B[38;5;241m=\u001B[39m makerv([\u001B[38;5;241m.2\u001B[39m,\u001B[38;5;241m.7\u001B[39m,\u001B[38;5;241m.1\u001B[39m]) \u001B[38;5;241m@\u001B[39m a\n\u001B[1;32m      3\u001B[0m Exs \u001B[38;5;241m=\u001B[39m infer\u001B[38;5;241m.\u001B[39msample(Ex,niter\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1000000\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'vmap' is not defined"
+     ]
+    }
+   ],
    "source": [
     "a = vmap(normal,0)(locs,scales)\n",
     "Ex = makerv([.2,.7,.1]) @ a\n",
@@ -433,6 +445,135 @@
     "np.mean(Exs)\n",
     "viz_upstream(Ex)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sample: 100%|██████████| 2000/2000 [00:03<00:00, 537.69it/s, 37 steps of size 3.44e-01. acc. prob=0.88] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "θs.shape=(1000, 3, 4)\n",
+      "φs.shape=(1000, 4, 6)\n",
+      "zs.shape=(1000, 5, 3)\n",
+      "ws.shape=(1000, 5, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# express model in numpyro\n",
+    "import numpy as np\n",
+    "import numpyro\n",
+    "from numpyro import distributions as dist\n",
+    "import jax\n",
+    "\n",
+    "M = 3\n",
+    "K = 4\n",
+    "N = 5\n",
+    "V = 6\n",
+    "α = np.ones(K)\n",
+    "β = np.ones(V)\n",
+    "def model():\n",
+    "    with numpyro.plate('M',M):\n",
+    "        θ = numpyro.sample('θ',dist.Dirichlet(α))\n",
+    "    with numpyro.plate('K',K):\n",
+    "        φ = numpyro.sample('φ',dist.Dirichlet(β))\n",
+    "    with numpyro.plate('M',M):\n",
+    "        with numpyro.plate('N',N):\n",
+    "            z = numpyro.sample('z',dist.Categorical(θ))\n",
+    "            w = numpyro.sample('w',dist.Categorical(φ[z,:]))\n",
+    "\n",
+    "kernel = numpyro.infer.HMC(model)\n",
+    "kernel = numpyro.infer.MixedHMC(kernel) # generalize kernel to handle discrete\n",
+    "mcmc = numpyro.infer.MCMC(kernel, num_samples=1000, num_warmup=1000)\n",
+    "rng_key = jax.random.PRNGKey(0)\n",
+    "mcmc.run(rng_key)\n",
+    "\n",
+    "# Get the samples\n",
+    "samples = mcmc.get_samples()\n",
+    "\n",
+    "θs = samples['θ']\n",
+    "φs = samples['φ']\n",
+    "zs = samples['z']\n",
+    "ws = samples['w']\n",
+    "\n",
+    "print(f\"{θs.shape=}\")\n",
+    "print(f\"{φs.shape=}\")\n",
+    "print(f\"{zs.shape=}\")\n",
+    "print(f\"{ws.shape=}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "θs.shape=(10, 3, 4)\n",
+      "φs.shape=(10, 4, 6)\n",
+      "cs.shape=(10, 3, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# express marginalized model in numpyro\n",
+    "import numpy as np\n",
+    "import numpyro\n",
+    "from numpyro import distributions as dist\n",
+    "import jax\n",
+    "\n",
+    "M = 3\n",
+    "K = 4\n",
+    "N = 5\n",
+    "V = 6\n",
+    "α = np.ones(K)\n",
+    "β = np.ones(V)\n",
+    "def model():\n",
+    "    with numpyro.plate('M',M):\n",
+    "        θ = numpyro.sample('θ',dist.Dirichlet(α))\n",
+    "    with numpyro.plate('K',K):\n",
+    "        φ = numpyro.sample('φ',dist.Dirichlet(β))\n",
+    "    p = θ @ φ\n",
+    "    c = numpyro.sample('c',dist.Multinomial(N,p))\n",
+    "\n",
+    "rng_key = jax.random.PRNGKey(0)\n",
+    "\n",
+    "predictive = numpyro.infer.Predictive(model, num_samples=10)\n",
+    "samples = predictive(rng_key)\n",
+    "\n",
+    "θs = samples['θ']\n",
+    "φs = samples['φ']\n",
+    "cs = samples['c']\n",
+    "\n",
+    "print(f\"{θs.shape=}\")\n",
+    "print(f\"{φs.shape=}\")\n",
+    "print(f\"{cs.shape=}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
