--- a/exploratory notebooks/demo-lda.ipynb
+++ b/exploratory notebooks/demo-lda.ipynb
@@ -451,23 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "sample: 100%|██████████| 2000/2000 [00:03<00:00, 537.69it/s, 37 steps of size 3.44e-01. acc. prob=0.88] \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "θs.shape=(1000, 3, 4)\n",
-      "φs.shape=(1000, 4, 6)\n",
-      "zs.shape=(1000, 5, 3)\n",
-      "ws.shape=(1000, 5, 3)\n"
+      "θs.shape=(10, 3, 1, 4)\n",
+      "φs.shape=(10, 4, 6)\n",
+      "zs.shape=(10, 3, 5)\n",
+      "ws.shape=(10, 3, 5)\n"
      ]
     }
    ],
@@ -485,23 +478,69 @@
     "α = np.ones(K)\n",
     "β = np.ones(V)\n",
     "def model():\n",
-    "    with numpyro.plate('M',M):\n",
-    "        θ = numpyro.sample('θ',dist.Dirichlet(α))\n",
     "    with numpyro.plate('K',K):\n",
     "        φ = numpyro.sample('φ',dist.Dirichlet(β))\n",
-    "    with numpyro.plate('M',M):\n",
+    "    with numpyro.plate('M',M,dim=-2):\n",
+    "        θ = numpyro.sample('θ',dist.Dirichlet(α))\n",
     "        with numpyro.plate('N',N):\n",
     "            z = numpyro.sample('z',dist.Categorical(θ))\n",
     "            w = numpyro.sample('w',dist.Categorical(φ[z,:]))\n",
     "\n",
-    "kernel = numpyro.infer.HMC(model)\n",
-    "kernel = numpyro.infer.MixedHMC(kernel) # generalize kernel to handle discrete\n",
-    "mcmc = numpyro.infer.MCMC(kernel, num_samples=1000, num_warmup=1000)\n",
     "rng_key = jax.random.PRNGKey(0)\n",
-    "mcmc.run(rng_key)\n",
+    "predictive = numpyro.infer.Predictive(model, num_samples=10)\n",
+    "samples = predictive(rng_key)\n",
     "\n",
-    "# Get the samples\n",
-    "samples = mcmc.get_samples()\n",
+    "θs = samples['θ']\n",
+    "φs = samples['φ']\n",
+    "zs = samples['z']\n",
+    "ws = samples['w']\n",
+    "\n",
+    "print(f\"{θs.shape=}\")\n",
+    "print(f\"{φs.shape=}\")\n",
+    "print(f\"{zs.shape=}\")\n",
+    "print(f\"{ws.shape=}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "θs.shape=(10, 3, 4)\n",
+      "φs.shape=(10, 4, 6)\n",
+      "zs.shape=(10, 3, 5)\n",
+      "ws.shape=(10, 3, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# express model in numpyro\n",
+    "import numpy as np\n",
+    "import numpyro\n",
+    "from numpyro import distributions as dist\n",
+    "import jax\n",
+    "\n",
+    "M = 3\n",
+    "K = 4\n",
+    "N = 5\n",
+    "V = 6\n",
+    "α = np.ones(K)\n",
+    "β = np.ones(V)\n",
+    "def model():\n",
+    "    θ = numpyro.sample('θ',dist.Dirichlet(α).expand((M,)))\n",
+    "    φ = numpyro.sample('φ',dist.Dirichlet(β).expand((K,)))\n",
+    "    z = numpyro.sample('z',dist.Categorical(θ[:,None]).expand((M,N)))\n",
+    "    w = numpyro.sample('w',dist.Categorical(φ[z,:]))\n",
+    "\n",
+    "rng_key = jax.random.PRNGKey(0)\n",
+    "predictive = numpyro.infer.Predictive(model, num_samples=10)\n",
+    "samples = predictive(rng_key)\n",
     "\n",
     "θs = samples['θ']\n",
     "φs = samples['φ']\n",
