about to screw around with automap substantially

--- a/exploratory notebooks/demo-automap.ipynb
+++ b/exploratory notebooks/demo-automap.ipynb
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "times 0.0064487457275390625 0.707543134689331\n",
+      "times 0.0054891109466552734 0.6607918739318848\n",
       "shape       | statement\n",
       "----------- | ---------\n",
       "()          | a = 0\n",
       "()          | b = 1\n",
       "(100,)      | c ~ vmap(normal_scale,[∅, ∅],100)(a,b)\n",
-      "(1000, 100) | d = [[ 0.887 -0.308 -1.162 ... -0.239 0.412 -0.663] [-0.346 0.354 -0.864 ... -1.268 0.911 1.874] [ 2.991 -1.122 1.396 ... 0.894 -0.088 0.37 ] ... [ 1.47 -0.623 -0.833 ... 1.153 -0.504 1.173] [ 1.813 0.035 -0.142 ... 0.326 -1.125 -0.769] [ 1.73 -0.044 0.08 ... 1.805 -0.668 -0.373]]\n",
+      "(1000, 100) | d = [[ 0.125 0.401 0.158 ... 0.537 1.516 -1.614] [-1.313 0.936 -0.009 ... -0.963 -0.978 0.405] [-1.06  0.067 2.64 ... -1.968 1.303 -0.092] ... [-1.359 0.229 0.013 ... 0.844 -0.228 0.199] [-0.723 -1.422 -0.424 ... -1.669 0.036 0.64 ] [ 0.407 0.58 -1.465 ... -2.364 -1.259 1.6 ]]\n",
       "(1000,)     | e = vmap(matmul,[∅, 0],1000)(c,d)\n",
       "()          | f ~ truncated(normal_scale)(a,b)\n",
       "(1000,)     | g ~ vmap(normal_scale,[0, ∅],1000)(e,f)\n"
@@ -55,9 +55,9 @@
     "x = makerv(np.random.randn(ndata,dims))\n",
     "sigma = Truncated(normal_scale,lo=0)(0,1)\n",
     "t0 = time.time()\n",
-    "w = automap([normal(0,1) for d in range(dims)],False)\n",
+    "w = automap([normal(0,1) for d in range(dims)])\n",
     "t1 = time.time()\n",
-    "y = automap([normal(w @ x[n,:], sigma) for n in range(ndata)],False)\n",
+    "y = automap([normal(w @ x[n,:], sigma) for n in range(ndata)])\n",
     "t2 = time.time()\n",
     "print(\"times\",t1-t0,t2-t1)\n",
     "print_upstream(y)"
@@ -94,24 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reroll time: 1.1092422008514404\n",
+      "reroll time: 1.0532259941101074\n",
       "shape       | statement\n",
       "----------- | ---------\n",
       "()          | a = 0\n",
       "()          | b = 1\n",
       "(100,)      | c ~ vmap(normal_scale,[∅, ∅],100)(a,b)\n",
-      "(1000, 100) | d = [[ 0.53 -0.884 -0.17 ... 0.073 -0.01 -1.24 ] [ 0.268 0.048 -0.191 ... 0.173 -0.977 1.599] [ 0.293 -0.91 -1.178 ... -0.762 0.07  0.223] ... [-0.23  0.441 -1.117 ... 2.001 0.162 1.74 ] [ 0.327 1.043 1.604 ... -0.088 -0.573 0.186] [ 1.826 1.645 0.159 ... -0.264 -0.297 -0.888]]\n",
+      "(1000, 100) | d = [[ 0.776 -1.776 0.105 ... 2.17  1.637 1.521] [-0.675 1.798 1.309 ... 1.266 1.348 -0.421] [ 1.013 -0.326 0.68 ... 1.781 -0.684 -0.249] ... [-1.011 0.348 0.92 ... -1.383 0.691 -1.377] [-0.225 -0.269 -1.54 ... -1.769 2.376 -0.613] [-0.496 0.028 -0.013 ... -0.218 -1.19  0.73 ]]\n",
       "(1000,)     | e = vmap(matmul,[∅, 0],1000)(c,d)\n",
       "()          | f ~ normal_scale(a,b)\n",
       "()          | g = abs(f)\n",
       "(1000,)     | h ~ vmap(normal_scale,[0, ∅],1000)(e,g)\n",
-      "inference time: 45.203689098358154\n"
+      "inference time: 99.30142283439636\n"
      ]
     }
    ],
