reduce unnecessary printing

--- a/demos/understanding-numpyro-plates.ipynb
+++ b/demos/understanding-numpyro-plates.ipynb
@@ -426,26 +426,180 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-14T20:54:12.460412Z",
-     "start_time": "2024-10-14T20:54:12.452485Z"
+     "end_time": "2024-10-15T13:09:23.266932Z",
+     "start_time": "2024-10-15T13:09:23.259979Z"
     }
    },
    "cell_type": "code",
-   "source": "out.shape",
+   "source": [
+    "def model():\n",
+    "    z = numpyro.distributions.Normal(0,1)\n",
+    "    print(z.support)\n",
+    "model()"
+   ],
    "id": "1f15403b97314bab",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real()\n"
+     ]
+    }
+   ],
+   "execution_count": 133
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T13:09:41.181582Z",
+     "start_time": "2024-10-15T13:09:41.176485Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def model():\n",
+    "    z = numpyro.distributions.Uniform([0,1,2],[3,4,5])\n",
+    "    print(z.support)\n",
+    "model()"
+   ],
+   "id": "361ed80987c883a0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interval(lower_bound=[0, 1, 2], upper_bound=[3, 4, 5])\n"
+     ]
+    }
+   ],
+   "execution_count": 135
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T13:21:12.665722Z",
+     "start_time": "2024-10-15T13:21:12.660946Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def model():\n",
+    "    with numpyro.plate(\"i\",3):\n",
+    "        z = numpyro.distributions.Normal(0,1)\n",
+    "    print(z.support)\n",
+    "model()"
+   ],
+   "id": "7abfc71e193612a2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Real()\n"
+     ]
+    }
+   ],
+   "execution_count": 142
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T13:10:21.026416Z",
+     "start_time": "2024-10-15T13:10:21.020850Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def model():\n",
+    "    with numpyro.plate(\"i\",3):\n",
+    "        z = numpyro.distributions.Bernoulli(0,[3,4,5])\n",
+    "    print(z.support)\n",
+    "model()"
+   ],
+   "id": "7e15aaa791bbfb9d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interval(lower_bound=0, upper_bound=[3, 4, 5])\n"
+     ]
+    }
+   ],
+   "execution_count": 138
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T13:13:15.644636Z",
+     "start_time": "2024-10-15T13:13:15.633906Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "jax.vmap(numpyro.distributions.constraints.interval)(jnp.array([0,1,2]),jnp.array([3,4,5]))",
+   "id": "5025eadc4ee4544a",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 4)"
+       "Interval(lower_bound=[0 1 2], upper_bound=[3 4 5])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 127
+   "execution_count": 140
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T13:13:41.863950Z",
+     "start_time": "2024-10-15T13:13:41.811984Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "jax.vmap(numpyro.distributions.constraints.interval,[None,0])(jnp.array(0),jnp.array([3,4,5]))\n",
+   "id": "cccaf6bf7519f297",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Interval(lower_bound=[0 0 0], upper_bound=[3 4 5])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 141
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T14:17:28.276301Z",
+     "start_time": "2024-10-15T14:17:28.035820Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "numpyro.distributions.Bernoulli(jnp.array([0.5,0.9])).log_prob(jnp.array([1,1]))",
+   "id": "8a7ff3878ed64cb8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([-0.6931472 , -0.10536055], dtype=float32)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 147
   },
   {
    "metadata": {},
@@ -453,7 +607,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "361ed80987c883a0"
+   "id": "c35dd8d469755ac2"
   }
  ],
  "metadata": {
