--- a/demos/ir.ipynb
+++ b/demos/ir.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "This notebook demonstrates how models could be constructed directly in pangolin's IR. **Note that\n",
     "as a user you almost certainly don't want to create models this way,** as it's a low-level notation. But it\n",
-    "is useful for understanding how models are represented under the hood, e.g. if you want to write a new algorithm that manipulates these models, or you want to implement a new backend."
+    "is useful for understanding how models are represented under the hood. You would definitely want to understand this if you want to write a new algorithm that manipulates these models, or you want to implement a new backend."
    ]
   },
   {
