--- a/demos/8schools.ipynb
+++ b/demos/8schools.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pangolin as pg\n",
-    "from pangolin.simple_interface import *"
+    "from pangolin.interface import *"
    ]
   },
   {
