--- a/demos/interface.ipynb
+++ b/demos/interface.ipynb
@@ -11,34 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "74f00291f6eb6800",
    "metadata": {
     "jupyter": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "#import pangolin as pg\n",
     "from pangolin import ir\n",
-    "from pangolin import simple_interface as pi"
+    "from pangolin import interface as pi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "00f046a3",
    "metadata": {},
    "outputs": [
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f9bd9587",
    "metadata": {},
    "outputs": [
@@ -77,16 +67,16 @@
    "source": [
     "# That's tedious! So pangolin provides a friendlier interface\n",
     "# For example, you can create constants using makerv.\n",
-    "# (An OperatorRV is just an RV but it also supports operator overloading, as we'll discuss below.)\n",
+    "# (An InfixRV is just an RV but it also supports operator overloading, as we'll discuss below.)\n",
     "\n",
-    "constant_rv = interface.constant(0)\n",
+    "constant_rv = pi.constant(0)\n",
     "\n",
     "print(repr(constant_rv))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "8042dff730703a27",
    "metadata": {
     "jupyter": {
@@ -117,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "f4b168c0",
    "metadata": {},
    "outputs": [
@@ -140,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ffbb0781",
    "metadata": {},
    "outputs": [
@@ -163,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "62a7d2bb",
    "metadata": {},
    "outputs": [
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "34ac4589",
    "metadata": {},
    "outputs": [
@@ -215,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "104b6fbf",
    "metadata": {},
    "outputs": [
@@ -242,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "bfd575a4",
    "metadata": {},
    "outputs": [
@@ -266,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "82ce10be",
    "metadata": {},
    "outputs": [
@@ -292,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "2665796e",
    "metadata": {},
    "outputs": [
@@ -328,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "fb89d4b4",
    "metadata": {},
    "outputs": [
@@ -361,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "32f5f760",
    "metadata": {},
    "outputs": [
@@ -396,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "9625a482",
    "metadata": {},
    "outputs": [
@@ -404,8 +394,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InfixRV(VMap(Add(), (0, 0), 3), InfixRV(Constant([0,1,2])), InfixRV(Constant([3,4,5])))\n",
-      "vmap(add, (0, 0), 3)([0 1 2], [3 4 5])\n",
       "shape | statement\n",
       "----- | ---------\n",
       "(3,)  | a = [0 1 2]\n",
@@ -423,77 +411,141 @@
     "y = pi.makerv([3,4,5])\n",
     "z = vectorized_add(x, y)\n",
     "\n",
-    "print(repr(z))\n",
-    "print(z)\n",
     "ir.print_upstream(z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "c3e09b46",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Add op got parent shapes ((3,), (3,)) not all scalar.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m x = pi.constant([\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m])\n\u001b[32m      4\u001b[39m y = pi.constant([\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m])\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m z = \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mrepr\u001b[39m(z))\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(z)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/PycharmProjects/pangolin/pangolin/simple_interface/base.py:66\u001b[39m, in \u001b[36mInfixRV.__add__\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m     65\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__add__\u001b[39m(\u001b[38;5;28mself\u001b[39m, other):\n\u001b[32m---> \u001b[39m\u001b[32m66\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<makefun-gen-1>:2\u001b[39m, in \u001b[36mAdd\u001b[39m\u001b[34m(a, b)\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/PycharmProjects/pangolin/pangolin/simple_interface/base.py:322\u001b[39m, in \u001b[36mscalar_fun_factory.<locals>.fun\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    321\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfun\u001b[39m(*args, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m322\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcreate_rv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m[\u001b[49m\u001b[43ma\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/PycharmProjects/pangolin/pangolin/simple_interface/base.py:243\u001b[39m, in \u001b[36mcreate_rv\u001b[39m\u001b[34m(op, *args)\u001b[39m\n\u001b[32m    241\u001b[39m args = \u001b[38;5;28mtuple\u001b[39m(makerv(a) \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m args)\n\u001b[32m    242\u001b[39m \u001b[38;5;66;03m# args = tuple(a if isinstance(a,RV) else constant(a) for a in args)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m243\u001b[39m \u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_shape\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m[\u001b[49m\u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# checks shapes\u001b[39;00m\n\u001b[32m    244\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m InfixRV(op, *args)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/PycharmProjects/pangolin/pangolin/ir.py:242\u001b[39m, in \u001b[36mScalarOp.get_shape\u001b[39m\u001b[34m(self, *parents_shapes)\u001b[39m\n\u001b[32m    240\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m shape \u001b[38;5;129;01min\u001b[39;00m parents_shapes:\n\u001b[32m    241\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m shape != ():\n\u001b[32m--> \u001b[39m\u001b[32m242\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m    243\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m op got parent shapes \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mparents_shapes\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m not all scalar.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    244\u001b[39m         )\n\u001b[32m    245\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m ()\n",
-      "\u001b[31mTypeError\u001b[39m: Add op got parent shapes ((3,), (3,)) not all scalar."
-     ]
-    }
-   ],
-   "source": [
-    "# Alternatively (and much simpler), if you simply do x+y when x and y are vectors, pangolin will do the vmapping for you\n",
-    "\n",
-    "x = pi.constant([0,1,2])\n",
-    "y = pi.constant([3,4,5])\n",
-    "z = x + y\n",
-    "\n",
-    "print(repr(z))\n",
-    "print(z)\n",
-    "ir.print_upstream(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "be37bd60",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got exception!\n",
-      "AssertionError('can only vectorize scalars + arrays of same shape')\n"
+      "shape | statement\n",
+      "----- | ---------\n",
+      "(3,)  | a = [0 1 2]\n",
+      "(3,)  | b = [3 4 5]\n",
+      "(3,)  | c = vmap(add, (0, 0), 3)(a,b)\n"
      ]
     }
    ],
    "source": [
-    "# Unlike in NumPy, pangolin does not support arbitrary broadcasting, as it is considered too error-prone.\n",
-    "# So, for example, you can't add a 2x2 matrix to a length-2 vector.\n",
+    "# Alternatively (and much simpler), if you simply do x+y when x and y are vectors\n",
+    "# pangolin will do the broadcasting / vmapping for you\n",
     "\n",
-    "x = pg.makerv([[2,1],[0,3]])\n",
-    "y = pg.makerv([[3,-3]])\n",
-    "try:\n",
-    "    z = x + y\n",
-    "except Exception as e:\n",
-    "    print(\"Got exception!\")\n",
-    "    print(repr(e))"
+    "x = pi.constant([0,1,2])\n",
+    "y = pi.constant([3,4,5])\n",
+    "z = x + y\n",
+    "\n",
+    "ir.print_upstream(z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
+   "id": "5ed3de1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got ValueError (as expected) Can't broadcast non-matching shapes (2,) and (2, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# By default, Pangolin only supports \"simple\" broadcasting as in Stan or JAGS:\n",
+    "# 1. only for \"all-scalar ops\" (all inputs and output)\n",
+    "# 2. all inputs must either be scalar or exactly the same shape\n",
+    "#\n",
+    "# So, for example, you can't add a 2x2 matrix to a length-2 vector.\n",
+    "\n",
+    "try:\n",
+    "    x = pi.constant([[2,1],[0,3]])\n",
+    "    y = pi.constant([3,-3])\n",
+    "    z = x + y\n",
+    "except ValueError as e:\n",
+    "    print(\"Got ValueError (as expected)\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "58a24052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got (expected) ValueError: Add op got parent shapes ((3,), (3,)) not all scalar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If you want, you can turn broadcasting off by:\n",
+    "# 1. setting the environmental variable SCALAR_BROADCASTING to \"off\" before importing\n",
+    "# 2. setting pi.SCALAR_BROADCASTING[0] to \"off\" (after importing)\n",
+    "# 3. temporarily with a context manager\n",
+    "\n",
+    "with pi.ScalarBroadcasting(\"off\"):\n",
+    "    assert pi.SCALAR_BROADCASTING == [\"off\"]\n",
+    "    try:\n",
+    "        x = pi.constant([0,1,2])\n",
+    "        y = pi.constant([3,4,5])\n",
+    "        z = x+y\n",
+    "    except ValueError as e:\n",
+    "        print(\"Got (expected) ValueError:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "732270ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape  | statement\n",
+      "------ | ---------\n",
+      "(2, 2) | a = [[2 1] [0 3]]\n",
+      "(2,)   | b = [ 3 -3]\n",
+      "(2, 2) | c = vmap(vmap(add, (0, 0), 2), (0, None), 2)(a,b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternatively you can enable numpy-style broadcasting\n",
+    "\n",
+    "with pi.ScalarBroadcasting(\"numpy\"):\n",
+    "    x = pi.constant([[2,1],[0,3]])\n",
+    "    y = pi.constant([3,-3])\n",
+    "    z = x + y\n",
+    "\n",
+    "pi.print_upstream(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c498c9f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crucially, no matter what style of broadcasting you use, it is ENTIRELY\n",
+    "# the job of the interface. The IR does not know about broadcasting at all.\n",
+    "# It only sees vmapped Ops."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "93fd18dc-48dd-45a6-9695-6d1ec57bce8d",
    "metadata": {},
    "outputs": [],
@@ -503,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "7dad2b61-ec03-4ecb-984f-611ba7faad71",
    "metadata": {},
    "outputs": [
@@ -527,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "33763db8-b5b9-42a6-9594-7e3060238fde",
    "metadata": {},
    "outputs": [
@@ -548,19 +600,11 @@
     "import os\n",
     "os.environ['PANGOLIN_SCALAR_BROADCASTING']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2dee463-e91c-4525-8472-4be100463645",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -574,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
