--- a/demos/experiments/IRT.ipynb
+++ b/demos/experiments/IRT.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "9012ad1a",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,8 @@
     "# get good-old jax log-prob function\n",
     "\n",
     "log_prob = pangolin.jax_backend.ancestor_log_prob(z)\n",
-    "z_init = {name: np.eye(z[name].shape[0]) if isinstance(z[name].op, pangolin.ir.Wishart) else np.zeros(z[name].shape) for name, rv in z.items()}\n",
+    "z_init = {name: np.eye(rv.shape[0]) if isinstance(rv.op, pangolin.ir.Wishart)\n",
+    "          else np.zeros(rv.shape) for name, rv in z.items()}\n",
     "log_prob(z_init)"
    ]
   }
